# Specter

./: .bumpversion.cfg  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  NOTICE  README.md  README.rst  dev-requirements.txt  doc-requirements.txt  pip-requires  pypi_description.rst  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst
docs/maintenance/: index.rst
docs/parallel/: index.rst
docs/release_notes/: index.rst
docs/reporting/: index.rst
docs/using/: index.rst
docs/writing_tests/: index.rst
specter/: __init__.py  __main__.py  exceptions.py  expect.py  logger.py  manager.py  parallel.py  reporting.py  runner.py  sample.py  scanner.py  spec.py  util.py  utils.py
specter/reporting/: __init__.py  console.py  core.py  dots.py  percentage.py  pretty.py  specter_json.py  utils.py  xunit.py
spektrum/: __init__.py  __main__.py  expect.py  runner.py  utils.py
spektrum/reporting/: core.py  data.py  testrail.py
tests/: __init__.py  sample_classes.py  test_expect.py  test_parallel.py  test_reporter.py  test_runner.py  test_spec.py  test_util.py
tests/example_data/: example.py  example_fixture.py
tools/: pip-requires  run_tests.sh  test-requires
